# an

./: .env.example  .gitignore  .pre-commit-config.yaml  MLOPS.md  Makefile  README.md  prefect.yaml  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
config/: metabase.env.example
dags/: parleman.py
dbt_parlemAn/: dbt_project.yml
dbt_parlemAn/models/: schema.yml
dbt_parlemAn/models/marts/: mart_circonscription_activity.sql  mart_commission_activity.sql  mart_depute_activity.sql  mart_depute_place_hemicycle.sql  mart_deputes_circonscriptions.sql  mart_dossiers_enriched.sql  mart_dossiers_votes_groupes.sql  mart_groupe_activity.sql  mart_groupes_co_vote.sql  mart_interventions_enriched.sql  mart_interventions_time.sql
dbt_parlemAn/models/staging/: stg_amendements.sql  stg_commissions.sql  stg_comptes_rendus.sql  stg_deputes.sql  stg_documents.sql  stg_dossier_actes_legislatifs.sql  stg_dossiers_parlementaires.sql  stg_interventions.sql  stg_mandats.sql  stg_organes.sql  stg_points_seance.sql  stg_scrutin_groupes_votes.sql  stg_scrutin_votes_individuels.sql  stg_scrutins.sql
dbt_parlemAn/tests/: test_stg_mandats_no_exact_duplicate_rows.sql
examples/: test_classifier.py
flows/: run_dbt_build.py  train_text_classification.py  upload_amendements_bq.py  upload_debats_bq.py  upload_deputes_bq.py  upload_dossiers_legislatifs_bq.py  upload_questions_ecrites_bq.py  upload_scrutins_bq.py
infra/: docker-compose.yml  main.tf  variables.tf
infra/airflow/: Dockerfile  requirements-airflow.txt
infra/inference/: Dockerfile
infra/mlflow/: Dockerfile
infra/prefect/: Dockerfile
infra/streamlit/: Dockerfile  requirements-streamlit.txt
lib/: config.py  extract.py  parsing_common.py
lib/amendements/: __init__.py  bq_schemas.py  models.py  parsing.py
lib/bq_utils/: __init__.py  bq_utils.py  chunking.py  client.py  loading.py  models.py  staging.py  validation.py
lib/debat/: __init__.py  bq_schemas.py  models.py  parsing.py
lib/depute/: bq_schemas.py  models.py
lib/dossiers_legislatifs/: __init__.py  bq_schemas.py  models.py  parsing.py
lib/questions_ecrites/: bq_schemas.py  models.py  parsing.py
lib/scrutins/: bq_schemas.py  models.py  parsing.py
mlops/: __init__.py  config.py
mlops/inference/: __init__.py
mlops/models/: __init__.py  classifier.py
mlops/training/: __init__.py
tests/: test_amendements_parsing.py  test_debat_parsing.py  test_parsers.py
(+6 files in other folders)
