[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parleman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "google-cloud-bigquery>=3.38.0",
    "pre-commit>=4.5.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "streamlit>=1.44.0",
    "transformers>=4.40.0",
    "accelerate>=1.1.0",
    "torch>=2.2.0",
    "scikit-learn>=1.5.0",
    "datasets>=2.20.0",
    "mlflow>=2.14.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "types-requests",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.setuptools]
packages = ["lib", "flows", "mlops"]

[tool.mypy]
disable_error_code = ["untyped-decorator"]
